src/index.css
body {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
    Arial, sans-serif;
  padding: 0px;
  margin: 0px;
  height: 100vh;
  background-color: #0d1b2a;
}

.main-header {
  overflow: hidden;
}

div {
  margin: 0px;
  padding: 0px;
}

input {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
  Arial, sans-serif;
  color: #778da9;
  background-color: #1b1b1b;
  border-style: none;
  font-size: 18px;
  border-radius: 10px;
  outline: none;
}

textarea {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
  Arial, sans-serif;
  flex: 1;
  resize: none;
  background-color: #1b263b;
  color: #e0e1dd;
  border-radius: 10px;
  border-style: none;
  padding: 10px;
  font-size: 16px;
  outline: none;
  white-space: nowrap;
  box-shadow: inset 0px 0px 15px #415a77;
}

textarea.wrapping {
  white-space: normal; /* or "wrap" depending on your desired behavior */
}


.base-grid {
  height: 100%;
  display: grid;
  grid-template-rows: auto 1fr auto;
  overflow: hidden;
}

h1,h2,h3,h4,h5,h6 {
  padding: 5px;
  margin: 0px;
  text-align: center;
  color: #e0e1dd;
}

.container {
  background-color: #1b263b;
  border-radius: 10px;
  margin: 0px 10px 10px 10px;
  box-shadow: inset 0px 0px 10px #415a77;
}

.container.drop {
  box-shadow: inset 0px 0px 15px #93a977;
}


.notepad-container {
  background-color: transparent;
  border-radius: 10px;
  margin: 0px 10px 10px 10px;
}

.findFileFolderContainer{
  background-color: #415a77;
  border-radius: 10px;
  box-shadow: inset 0px 0px 3px #08101a;
}

.overview-grid {
  display: grid;
  grid-template-columns: repeat(auto-fill, 75px); /* Fixed width of 75px for each column */
  grid-gap: 15px;
  padding: 20px 10px;
  overflow: auto;
  align-content: start;
}

.button-container {
  display: grid;
  grid-template-rows: 1fr auto;
  text-align: center;
}

.button-container i {
  font-size: 50px;
  color: #778da9;
  text-shadow: 3px 3px 10px rgba(0, 0, 0, 1); /* Adjust the values as needed */
}


.user-button {
  padding: 10px;
  margin: 0px 10px 10px 10px;
  background-color: #415a77;
  border-style: none;
  border-radius: 10px;
  color: #e0e1dd;
  box-shadow: inset 0px 0px 5px #778da9;
}

.user-button:hover {
  background-color: #778da9;
}

.notepad-grid {
  height: 100%;
  display: grid;
  grid-template-rows: auto 1fr auto;
}

.home-header-grid {
  display: grid;
  grid-template-columns: 1fr auto;
  padding: 0 20px;
  margin: 0;
}

.input-button {
  border-radius: 10px;
  background-color: #415a77;
  padding: 10px 0px;
  border-style: none;
  color: #e0e1dd;
  box-shadow: inset 0px 0px 10px #778da9;
}

.input-button:hover{
  background-color: #889ADE;
}



.header-grid {
  display: grid;
  grid-template-columns: min-content 1fr;
  padding: 0 20px;
  margin: 0;
}

.header-grid h1 {
  text-align: left;
  margin: 0;
}

.back-button {
  margin: 5px 5px 0px 0px;
}

.slim-button {
  background-color: transparent;
  border-style: none;
  color: white
}

.slim-button:hover{
  color: rgb(197, 197, 197);
}

.file-content-header {
  text-wrap: nowrap;
  overflow: hidden;
}


.text-control-button {
  background-color: transparent;
  border-style: none;
  color: rgb(71, 71, 71);
}

.text-control-button:hover{
  color: rgb(133, 133, 133)
}

.text-control-button.active {
  color: white;
}







.overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.733); /* Semi-transparent overlay background */
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 2;
}

.centered-container {
  width: 500px;
  background: #313131;
  padding: 20px;
  border-radius: 8px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
  text-align: center;
  display: grid;
  grid-gap: 5px;
}







.context-menu {
  display: none;
  position: absolute;
  background-color: #2b2b2b;
  border: 1px solid #11a7d4;
  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
  color: rgb(218, 218, 218);
  padding: 8px;
  z-index: 1000;
}

.context-menu-item {
  padding: 8px;
  cursor: pointer;
}

.context-menu-item:hover {
  background-color: #e0e0e0;
}




::-webkit-scrollbar {
  width: 6px;
}

/* Track */
::-webkit-scrollbar-track {
  background-color: transparent;
}

/* Handle */
::-webkit-scrollbar-thumb {
  -webkit-border-radius: 10px;
  border-radius: 10px;
  background: #a73f3f;
  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
}

